# coolprop-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
examples/: full_demo.rs  multiprocess.rs  multithread.rs
src/: abstract_state.rs  error.rs  ffi.rs  ha_props.rs  indices.rs  lib.rs  props.rs
tests/: abstract_state.rs  config.rs  global.rs  humid_air.rs  props.rs
tests/common/: mod.rs
